addeded code for webcam demo. Can also use the methods in the webcam demo for HoloLens

--- a/textFiles/history.txt
+++ b/textFiles/history.txt
@@ -65,3 +65,8 @@ what company is the bus with?
 what color is the bus?
 how many people are riding bikes?>
 what are the people wearing?
+are there any people in front of me?
+what is in front of me?
+what is in front of me?
+what color is the alien toy?
+what does the blue mug say?
